Fix notes from being cropped on right edge

--- a/assets/css/apps/note/views/NoteIndex.css
+++ b/assets/css/apps/note/views/NoteIndex.css
@@ -61,12 +61,12 @@
 }
 
 .note-container {
-    width: 100%;
+    width: calc(100% - 40px);
+    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
     align-items: start;
-    padding: 0 20px;
+    padding: 0px 50px 0px 0px;
 }
 
 /* To-do */
